# Tic-Tac-Toe

./: .clang-tidy  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
.github/workflows/: ci.yml
App/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
App/ClearButton/: ClearButton.cpp  ClearButton.hpp
App/Field/: Field.cpp  Field.hpp
App/TurnWindow/: TurnWindow.cpp  TurnWindow.hpp
